[gd_scene load_steps=5 format=3 uid="uid://c3d36r6wvdgmm"]

[ext_resource type="Script" uid="uid://i60pjnap8cdw" path="res://scripts/menu.gd" id="1_rayio"]
[ext_resource type="Shader" uid="uid://bqj54jjmtf08h" path="res://art/shaders/main_menu_ui.gdshader" id="2_4pl3l"]
[ext_resource type="Theme" uid="uid://bbxq3huxritnu" path="res://art/UI/menu_theme.tres" id="3_rpghy"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4pl3l"]
shader = ExtResource("2_4pl3l")
shader_parameter/height = 7.5
shader_parameter/speed = 1.0
shader_parameter/frequency = 25.0

[node name="MainMenuUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rayio")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -766.0
offset_top = -283.5
offset_bottom = 283.5
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
material = SubResource("ShaderMaterial_4pl3l")
layout_mode = 2
theme = ExtResource("3_rpghy")
theme_override_font_sizes/font_size = 96
text = "THE DEEP END"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 30

[node name="Start" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 75)
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_rpghy")
theme_override_font_sizes/font_size = 32
text = "Start"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 75)
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_rpghy")
theme_override_font_sizes/font_size = 32
text = "Options"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 75)
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_rpghy")
theme_override_font_sizes/font_size = 32
text = "Quit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/Start" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/Options" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/VBoxContainer/Quit" to="." method="_on_quit_button_pressed"]
